more doc errors fixed ...  more bugs
